--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "touristappid",
+        "appid" : "wxef024a3f3e03b1f6",
         "setting" : {
             "urlCheck" : false,
             "minified" : false
