--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "灵工-下单端",
-    "appid" : "__UNI__2605D10",
+    "appid" : "__UNI__EFD4299",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -83,5 +83,21 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "h5" : {
+        "sdkConfigs" : {
+            "maps" : {}
+        },
+        "devServer" : {
+            "proxy" : {
+                //外网网址根路径 `/ `后，数据包前的部分
+                "/" : {
+                    //外网根路径 `https://www.abc.com`
+                    "target" : "https://t44o902052.zicp.fun"
+                }
+            },
+            //步骤二勾选后的效果
+            "https" : false
+        }
+    }
 }
