--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "灵工-下单端",
     "appid" : "__UNI__EA2918B",
-    "description" : "",
+    "description" : "/lhyg/order/",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -103,10 +103,10 @@
                 }
             },
             //步骤二勾选后的效果
-            "https" : false
+            "https" : true
         },
         "router" : {
-            "base" : "/",
+            "base" : "",
             "mode" : "hash"
         }
     }
